--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -22,7 +22,7 @@
                     <td>1</td>
                     <td><img src="../../images/users/arhi.jpg"/></td>
                     <td>Архи</td>
-                    <td>33,7<span><img src="../../images/green_up.png">3</span></td>
+                    <td>33,7</td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -34,115 +34,117 @@
                     <td>3</td>
                     <td><img src="../../images/users/flash.jpg"/></td>
                     <td>Флэш</td>
-                    <td>20,3</td>
+                    <td>23,3<span><img src="../../images/green_up.png">3</span></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><img src="../../images/users/kinder.jpg"/></td>
-                    <td>Киндер</td>
-                    <td>19,2<span><img src="../../images/green_up.png">2</span></td>
+                    <td><img src="../../images/users/zodiak.jpg"/></td>
+                    <td>Зодиак</td>
+                    <td>22<span><img src="../../images/green_up.png">3</span></td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><img src="../../images/users/zodiak.jpg"/></td>
-                    <td>Зодиак</td>
-                    <td>19<span><img src="../../images/green_up.png">10</span></td>
+                    <td><img src="../../images/users/yesterday.jpg"/></td>
+                    <td>Yesterday</td>
+                    <td>20<span><img src="../../images/green_up.png">3</span></td>
                 </tr>
                 <tr>
                     <td>6</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
+                    <td>19,2</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="../../images/users/kris.jpg"/></td>
+                    <td>Крис</td>
+                    <td>19,2<span><img src="../../images/green_up.png">10,2</span></td>
+                </tr>
+                <tr>
+                    <td>8</td>
                     <td><img src="../../images/users/plesen.jpg"/></td>
                     <td>Плесень</td>
                     <td>18</td>
                 </tr>
                 <tr>
-                    <td>7</td>
+                    <td>9</td>
                     <td><img src="../../images/users/reinoven.jpg"/></td>
                     <td>Рейновен</td>
                     <td>17,6</td>
                 </tr>
-                <tr>
-                    <td>8</td>
-                    <td><img src="../../images/users/yesterday.jpg"/></td>
-                    <td>Yesterday</td>
-                    <td>17<span><img src="../../images/green_up.png">2</span></td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td><img src="../../images/users/moriarty.jpg"/></td>
-                    <td>Мориарти</td>
-                    <td>15<span><img src="../../images/green_up.png">2</span></td>
-                </tr>
+                
                 <tr>
                     <td>10</td>
+                    <td><img src="../../images/users/moriarty.jpg"/></td>
+                    <td>Мориарти</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>11</td>
                     <td><img src="../../images/users/krista.jpg"/></td>
                     <td>Криста</td>
                     <td>14,8</td>
                 </tr>
                 <tr>
-                    <td>11</td>
+                    <td>12</td>
                     <td><img src="../../images/users/aleksa.jpg"/></td>
                     <td>Алекси</td>
-                    <td>14<span><img src="../../images/green_up.png">2</span></td>
+                    <td>14</td>
                 </tr>
                 <tr>
-                    <td>12</td>
+                    <td>13</td>
                     <td><img src="../../images/users/vb.jpg"/></td>
                     <td>Валерун-Балерун</td>
                     <td>13,7</td>
                 </tr>
                 <tr>
-                    <td>13</td>
+                    <td>14</td>
                     <td><img src="../../images/users/iskra.jpg"/></td>
                     <td>Искра</td>
-                    <td>13<span><img src="../../images/green_up.png">6</span></td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td><img src="../../images/users/jnec.jpg"/></td>
-                    <td>Жнец</td>
-                    <td>11<span><img src="../../images/green_up.png">5</span></td>
+                    <td>13</td>
                 </tr>
                 <tr>
                     <td>15</td>
-                    <td><img src="../../images/users/freddy.jpg"/></td>
-                    <td>Freddy Krueger</td>
-                    <td>10,8<span><img src="../../images/green_up.png">2</span></td>
+                    <td><img src="../../images/users/artik.jpg"/></td>
+                    <td>Артик</td>
+                    <td>12,8<span><img src="../../images/green_up.png">12,8</span></td>
                 </tr>
                 <tr>
                     <td>16</td>
-                    <td><img src="../../images/users/kris.jpg"/></td>
-                    <td>Крис</td>
-                    <td>9</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
+                    <td>11</td>
                 </tr>
                 <tr>
                     <td>17</td>
+                    <td><img src="../../images/users/freddy.jpg"/></td>
+                    <td>Freddy Krueger</td>
+                    <td>10,8</td>
+                </tr>
+                <tr>
+                    <td>18</td>
+                    <td><img src="../../images/users/ko_moscow.jpg"/></td>
+                    <td>Крестный отец (Москва)</td>
+                    <td>10,8<span><img src="../../images/green_up.png">10,8</span></td>
+                </tr>
+                
+                <tr>
+                    <td>19</td>
                     <td><img src="../../images/users/cat.jpg"/></td>
                     <td>Кошка</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>18</td>
+                    <td>20</td>
                     <td><img src="../../images/users/alisa.jpg"/></td>
                     <td>Алиса</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>19</td>
+                    <td>21</td>
                     <td><img src="../../images/users/napoleon.jpg"/></td>
                     <td>Наполеон</td>
                     <td>9</td>
-                </tr>
-                <tr>
-                    <td>20</td>
-                    <td><img src="../../images/users/gadjet.jpg"/></td>
-                    <td>Гаджет</td>
-                    <td>8<span><img src="../../images/green_up.png">2</span></td>
-                </tr>
-                <tr>
-                    <td>21</td>
-                    <td><img src="../../images/users/prodajnic.jpg"/></td>
-                    <td>Продажник</td>
-                    <td>8<span><img src="../../images/green_up.png">8</span></td>
                 </tr>
             </table>
             <!-- <div class="full_table">
